--- a/index.html
+++ b/index.html
@@ -26,7 +26,30 @@
         th {
             background: #fdd835;
         }
-
+        .border-line {
+            border: 1px dotted #00bcd4;
+        }
+        .table-name {
+            font-size: 24px;
+            margin-top: 40px;
+        }
+        table {
+            width:100%
+        }
+        li {
+            color: #00b0ff;
+        }
+        .title-name {
+            font-size: 20px;
+        }
+        .block {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+        }
+        .right-block {
+            margin-left: 38vw;
+        }
     </style>
 
 </head>
@@ -41,13 +64,13 @@
                 <iframe class="video-container" src="https://www.youtube.com/embed/y881t8ilMyc" frameborder="0" allowfullscreen></iframe></iframe>
             </div>
 
-            <div class="d-flex justify-content-start">
+            <div class="block">
                 <div>
-                    <p>Погода у Львові</p>
-                    <img src="" alt="">
+                    <p class="title-name">Погода у Львові</p>
+                    <img  src="" alt="">
                 </div>
-                <div>
-                    <p>Ресурси про погоду</p>
+                <div class="right-block">
+                    <p class="title-name">Ресурси про погоду</p>
                     <ul>
                         <li>Синоптик</li>
                         <li>Giometeo</li>
@@ -57,8 +80,8 @@
                 </div>
             </div>
 
-            <p style="font-size: 24px; margin-top: 40px">Температура в цей день</p>
-            <table style="width:100%; margin-left: 10px">
+            <p class="table-name">Температура в цей день</p>
+            <table>
                 <tr>
                     <th>2020</th>
                     <th>2019</th>
@@ -92,7 +115,7 @@
                 </tr>
             </table>
         </div>
-        <hr class="mt-5"/>
+        <div class="mt-5 border-line"></div>
 
     </div>
 </main>
@@ -102,6 +125,7 @@
 
 
 <!-- JS-->
+
 <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
