--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="block">
                 <div>
                     <p class="title-name">Погода у Львові</p>
-                    <img  src="" alt="">
+                    <img  src="https://sinst.fwdcdn.com/img/weatherImg/b/d320.jpg" alt="">
                 </div>
                 <div class="right-block">
                     <p class="title-name">Ресурси про погоду</p>
